# uinput

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  StandardSettings.cmake  Tools.cmake
examples/: CMakeLists.txt  driver_example.cpp  keyboard_example.cpp  mouse_example.cpp  touch_example.cpp
include/hmi/: keyboard.hpp  mouse.hpp  touch.hpp
include/hmi/common/: logger.hpp
include/hmi/system/: ev_generator.hpp  file_desc.hpp  file_desc_defines.hpp  file_descriptor.hpp  file_descriptor_types.hpp  uinput.hpp  uinput_defines.hpp
include/hmi/system/linux/: file_descriptor.hpp  types.hpp
include/uinput/: uinput.hpp  uinput_base.hpp  uinput_defines.hpp  uinput_driver.hpp  uinput_key_feature.hpp  uinput_mouse_feature.hpp
include/uinput/common/: crtp.hpp  enum_cast.hpp  logger.hpp
include/uinput/feature/: uinput_key_feature.hpp  uinput_mouse_feature.hpp  uinput_mtouch_feature.hpp
include/uinput/system/: ev_generator.hpp  file_desc.hpp  file_desc_defines.hpp
include/virtual_hmi/: file_descriptor.hpp  keyboard.hpp  logger.h  mouse.hpp  touch.hpp  types.hpp  virtual_device.hpp
include/virtual_hmi/common/: logger.hpp  types.hpp
include/virtual_hmi/system/: file_descriptor.hpp  virtual_device.hpp
src/: file_descriptor.cpp  keyboard.cpp  mouse.cpp  touch.cpp  uinput_driver.cpp  virtual_device.cpp
src/system/: file_desc.cpp  file_descriptor.cpp  uinput.cpp  virtual_device.cpp
src/system/linux/: file_descriptor.cpp
tests/: CMakeLists.txt  test.cpp  test_file_descriptor.cpp  test_keyboard.cpp  test_mouse.cpp  test_touch.cpp  test_virtual_device.cpp
tests/system/: test_file_desc.cpp  test_file_descriptor.cpp  test_uinput.cpp
tests/system/linux/: test_file_descriptor.cpp
